--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     implementation "com.android.support:design:${supportVersion}"
     implementation "com.android.support:support-v4:${supportVersion}"
     implementation 'com.android.support:support-v4:27.1.0'
+
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:2.8.47"
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
